remove img in lp

--- a/roosevelt-new-lp.html
+++ b/roosevelt-new-lp.html
@@ -59,8 +59,8 @@
                             <nav class="inner-nav">
                                 <ul class="links">
                                     <li><a href="#Home">Home</a></li>
-                                    <li><a href="javascript:;">Corporate Writing</a></li>
-                                    <!-- <div class="dropdown">
+                                    <!-- <li><a href="javascript:;">Corporate Writing</a></li> -->
+                                    <div class="dropdown">
                                         <a class="dropbtn">Corporate Writing </a>
                                         <div class="dropdown-content ">
                                             <div class="navinner-drop">
@@ -72,7 +72,7 @@
                                                 <img src="./images/businessplan-navicon.png" alt="">
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>
                                     <!-- {{-- <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" role="button" id="servicesDropdown"
                                             aria-expanded="false">
@@ -85,8 +85,8 @@
                                             <li><a href="{{ route('course') }}">Course Work Writing</a></li>
                                         </ul>
                                     </li> --}} -->
-                                    <li><a href="javascript:;">Digital Marketing</a></li>
-                                    <!-- <div class="dropdown">
+                                    <!-- <li><a href="javascript:;">Digital Marketing</a></li> -->
+                                    <div class="dropdown">
                                         <a class="dropbtn">Digital Marketing </a>
                                         <div class="dropdown-content otherunique">
                                             <div class="navinner-drop">
@@ -119,9 +119,9 @@
                                                 <img src="./images/businessplan-navicon.png" alt="">
                                             </div>
                                         </div>
-                                    </div> -->
-                                    <li><a href="javascript:;">Other Services</a></li>
-                                    <!-- <div class="dropdown ">
+                                    </div>
+                                    <!-- <li><a href="javascript:;">Other Services</a></li> -->
+                                    <div class="dropdown ">
                                         <a class="dropbtn"> Other Services</a>
                                         <div class="dropdown-content otherunique">
                                             <div class="navinner-drop">
@@ -209,7 +209,7 @@
                                                 <img src="./images/success.png" alt="">
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>
                                     <li><a href="#contactUs">Contact Us</a></li>
 
                                 </ul>
