add slider in lp

--- a/roosevelt-new-lp.html
+++ b/roosevelt-new-lp.html
@@ -782,85 +782,88 @@
                                 initial concept to becoming a published author.
                             </p>
                         </div>
-                        <div class="row">
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>1. Initial Consultation</h4>
-                                    <p>Our collaboration starts with thoroughly discussing your vision for the book.
-                                        This includes understanding your goals, preferences, and expectations. We'll
-                                        then explore the genre, target audience, and desired tone to ensure that we
-                                        align our efforts with your vision.</p>
-                                </div>
+                        <div id="splide4" class="splide">
+                            <div class="splide__track">
+                                <ul class="splide__list">
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>1. Initial Consultation</h4>
+                                            <p>Our collaboration starts with thoroughly discussing your vision for the book.
+                                                This includes understanding your goals, preferences, and expectations. We'll
+                                                then explore the genre, target audience, and desired tone to ensure that we
+                                                align our efforts with your vision.</p>
+                                        </div>
+                                    </li>
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>2. Outline Approval</h4>
+                                            <p>Once we understand your requirements clearly, our team will draft an extensive
+                                                outline for your approval. This outline would be the guideline for the entire
+                                                project, outlining the structure, key themes, and chapter breakdown. We welcome
+                                                your feedback and revisions to ensure the outline matches your vision.</p>
+                                        </div>
+                                    </li>
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>3. Writing Your Story</h4>
+                                            <p>With the outline approved, our talented writers get to work on bringing your
+                                                story to life. Using their expertise and creativity, they write engaging prose
+                                                that captivates readers from the first page to the last. Throughout the writing
+                                                process, we maintain open communication to address any questions or concerns
+                                                that may arise.</p>
+                                        </div>
+                                    </li>
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>4. Editing and Proofreading</h4>
+                                            <p>Once the initial draft is complete, our experienced editors vigilantly review the
+                                                manuscript for clarity, coherence, and consistency. They ensure that your story
+                                                flows seamlessly and that the language is perfectly polished. We also conduct
+                                                thorough proofreading to catch any grammatical errors or typos before proceeding
+                                                to the next step.</p>
+                                        </div>
+                                    </li>
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>5. Book Formatting</h4>
+                                            <p>With the content finalized, we will format the book for publication. Our team
+                                                ensures that the layout is professional and visually appealing, optimizing the
+                                                formatting for both print and digital formats. We pay close attention to details
+                                                such as font selection, spacing, and alignment to enhance the reader experience.
+                                            </p>
+                                        </div>
+                                    </li>
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>6. Book Publishing</h4>
+                                            <p>Once the formatting is complete, we handle the publishing process on your behalf.
+                                                Whether you choose traditional publishing or self-publishing, we handle all the
+                                                logistics to ensure a smooth transition from manuscript to published book. We
+                                                guide you through each step of the publishing process, from ISBN assignment to
+                                                distribution.</p>
+                                        </div>
+                                    </li>
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>7. Book Marketing</h4>
+                                            <p>After publishing the book, we help you create a customized marketing strategy to
+                                                promote your work to the widest possible audience. Our marketing experts use
+                                                various channels, including social media, email marketing, and book launch
+                                                events, to generate buzz and drive sales.</p>
+                                        </div>
+                                    </li>
+                                    <li class="splide__slide">
+                                        <div class="cards-inner">
+                                            <h4>8. Designing Covers</h4>
+                                            <p>Finally, we collaborate with talented designers to create eye-catching covers
+                                                that capture the essence of your book. Our designers work closely with you to
+                                                develop concepts that reflect your vision and resonate with your target
+                                                audience. We ensure that the cover design stands out on bookshelves and online
+                                                platforms, enticing readers to pick up your book.</p>
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>2. Outline Approval</h4>
-                                    <p>Once we understand your requirements clearly, our team will draft an extensive
-                                        outline for your approval. This outline would be the guideline for the entire
-                                        project, outlining the structure, key themes, and chapter breakdown. We welcome
-                                        your feedback and revisions to ensure the outline matches your vision.</p>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>3. Writing Your Story</h4>
-                                    <p>With the outline approved, our talented writers get to work on bringing your
-                                        story to life. Using their expertise and creativity, they write engaging prose
-                                        that captivates readers from the first page to the last. Throughout the writing
-                                        process, we maintain open communication to address any questions or concerns
-                                        that may arise.</p>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>4. Editing and Proofreading</h4>
-                                    <p>Once the initial draft is complete, our experienced editors vigilantly review the
-                                        manuscript for clarity, coherence, and consistency. They ensure that your story
-                                        flows seamlessly and that the language is perfectly polished. We also conduct
-                                        thorough proofreading to catch any grammatical errors or typos before proceeding
-                                        to the next step.</p>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>5. Book Formatting</h4>
-                                    <p>With the content finalized, we will format the book for publication. Our team
-                                        ensures that the layout is professional and visually appealing, optimizing the
-                                        formatting for both print and digital formats. We pay close attention to details
-                                        such as font selection, spacing, and alignment to enhance the reader experience.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>6. Book Publishing</h4>
-                                    <p>Once the formatting is complete, we handle the publishing process on your behalf.
-                                        Whether you choose traditional publishing or self-publishing, we handle all the
-                                        logistics to ensure a smooth transition from manuscript to published book. We
-                                        guide you through each step of the publishing process, from ISBN assignment to
-                                        distribution.</p>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>7. Book Marketing</h4>
-                                    <p>After publishing the book, we help you create a customized marketing strategy to
-                                        promote your work to the widest possible audience. Our marketing experts use
-                                        various channels, including social media, email marketing, and book launch
-                                        events, to generate buzz and drive sales.</p>
-                                </div>
-                            </div>
-                            <div class="col-3">
-                                <div class="cards-inner">
-                                    <h4>8. Designing Covers</h4>
-                                    <p>Finally, we collaborate with talented designers to create eye-catching covers
-                                        that capture the essence of your book. Our designers work closely with you to
-                                        develop concepts that reflect your vision and resonate with your target
-                                        audience. We ensure that the cover design stands out on bookshelves and online
-                                        platforms, enticing readers to pick up your book.</p>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
@@ -1151,6 +1154,40 @@
                     },
                     1200: {
                         perPage: 3,
+
+                    },
+                },
+            }).mount();
+            new Splide('#splide4', {
+                type: 'loop',
+                perPage: 3,
+                autoplay: true,
+                pagination: false,
+                arrows: false,
+                grabCursor: true,
+                breakpoints: {
+                    640: {
+                        perPage: 1,
+
+                    },
+                    767: {
+                        perPage: 1,
+
+                    },
+                    991: {
+                        perPage: 2,
+
+                    },
+                    1024: {
+                        perPage: 2,
+
+                    },
+                    1200: {
+                        perPage: 2,
+
+                    },
+                    1400: {
+                        perPage: 2,
 
                     },
                 },
