multiple thing fixes

--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
                             <div class="flex ">
                                 <div class="flex navcta">
                                     <div>
-                                        <a class="btn" href="#">GET STARTED </a>
+                                        <a class="btn" href="javascript:;">GET STARTED </a>
                                     </div>
                                     <div>
-                                        <a class="btn btn2" href="#">LIVE CHAT</a>
+                                        <a class="btn btn2" href="javascript:;">LIVE CHAT</a>
                                     </div>
                                 </div>
                             </div>
@@ -305,7 +305,7 @@
                                         <input type="hidden" class="postal" id="hpostal" name="postal" value="74000">
                                         <input type="hidden" class="timezone" id="htimezone" name="timezone"
                                             value="Asia/Karachi">
-                                        <button id="submitHeaderForm" class="button Now" type="button">
+                                        <button id="submitHeaderForm" class="button Now" type="submit">
                                             Create Your Account
                                         </button>
 
@@ -344,14 +344,6 @@
                     </ul>
                 </div>
             </div>
-
-
-
-
-
-
-
-
         </section>
 
         <!-- slider  -->
@@ -419,7 +411,7 @@
                         <li class="splide__slide">
                             <div class="splide_slide_box">
                                 <div>
-                                    <img src="./images/topslide4.png" alt="">
+                                    <img src="./images/ebook-slider1.jpg" alt="">
                                 </div>
                                 <div class="imgBox">
                                     <h4>Book Formatting Service</h4>
@@ -435,7 +427,7 @@
                         <li class="splide__slide">
                             <div class="splide_slide_box">
                                 <div>
-                                    <img src="./images/topslide4.png" alt="">
+                                    <img src="./images/ebook-slider2.jpg" alt="">
                                 </div>
                                 <div class="imgBox">
                                     <h4>Book Marketing Service</h4>
@@ -451,7 +443,7 @@
                         <li class="splide__slide">
                             <div class="splide_slide_box">
                                 <div>
-                                    <img src="./images/topslide4.png" alt="">
+                                    <img src="./images/ebook-slider3.jpg" alt="">
                                 </div>
                                 <div class="imgBox">
                                     <h4>Book Cover Design Service</h4>
@@ -488,10 +480,10 @@
                                     </p>
                                     <div class="flex navcta">
                                         <div>
-                                            <a class="btn" href="#">GET STARTED </a>
+                                            <a class="btn" href="javascript:;">GET STARTED </a>
                                         </div>
                                         <div>
-                                            <a class="btn btn2" href="#">LIVE CHAT</a>
+                                            <a class="btn btn2" href="javascript:;">LIVE CHAT</a>
                                         </div>
                                         <div class="Cta">
                                             <a href="tel:+703 570-5762">Call Us : +703 570-5762</a>
@@ -561,10 +553,10 @@
                         </p>
                         <div class="flex navcta">
                             <div>
-                                <a class="btn" href="#">GET STARTED </a>
+                                <a class="btn" href="javascript:;">GET STARTED </a>
                             </div>
                             <div>
-                                <a class="btn btn2" href="#">LIVE CHAT</a>
+                                <a class="btn btn2" href="javascript:;">LIVE CHAT</a>
                             </div>
                         </div>
                     </div>
@@ -581,10 +573,10 @@
                             editing to final publication.</p>
                         <div class="flex navcta">
                             <div>
-                                <a class="btn" href="#">Request Quote</a>
+                                <a class="btn" href="javascript:;">Request Quote</a>
                             </div>
                             <div>
-                                <a class="btn btn2" href="#">Live Chat</a>
+                                <a class="btn btn2" href="javascript:;">Live Chat</a>
                             </div>
                         </div>
                     </div>
@@ -612,10 +604,10 @@
                             Today!</h2>
                         <div class="flex navcta">
                             <div>
-                                <a class="btn" href="#">Get Started</a>
+                                <a class="btn" href="javascript:;">Get Started</a>
                             </div>
                             <div>
-                                <a class="btn btn2" href="#">Live Chat</a>
+                                <a class="btn btn2" href="javascript:;">Live Chat</a>
                             </div>
                             <div class="Cta">
                                 <a href="tel:+703 570-5762">Call Us : +703 570-5762</a>
@@ -1044,7 +1036,7 @@
                             </div>
                             <div class="flex navcta">
                                 <div>
-                                    <a class="btn" href="#">Get Started</a>
+                                    <a class="btn" href="javascript:;">Get Started</a>
                                 </div>
 
                             </div>
