--- a/index.html
+++ b/index.html
@@ -889,16 +889,14 @@
                                         <img src="./images/testiimg.png" alt="tesiimg">
                                         <div class="information">
 
-                                            <p>Emily s.</p>
+                                            <p>Brian Thomas </p>
                                             <div class="stars">
                                                 <span>CEo of (Flaxstudio)</span>
                                             </div>
                                         </div>
                                     </div>
                                     <p>
-                                        "Roosevelt Writes exceeded my expectations at every turn. They transformed my
-                                        manuscript into a captivating Book that resonated.
-                                        with readers far and wide. It's a highly recommended service!"
+                                        Thank you, Roosevelt Writes for the exceptional writing and editing services for my books. I can’t believe I am a published author now, thanks to your help! 
                                     </p>
                                     <div class="icon">
                                         <div>
@@ -921,16 +919,14 @@
                                         <img src="./images/testiimg.png" alt="tesiimg">
                                         <div class="information">
 
-                                            <p>Archer</p>
+                                            <p>Amanda L. </p>
                                             <div class="stars">
                                                 <span>CEo of (Flaxstudio)</span>
                                             </div>
                                         </div>
                                     </div>
                                     <p>
-                                        "Roosevelt Writes exceeded my expectations at every turn. They transformed my
-                                        manuscript into a captivating Book that resonated.
-                                        with readers far and wide. It's a highly recommended service!"
+                                        Roosevelt Writes is a great agency. Chris and Jeff were very helpful and patient with me throughout the process. I would highly recommend this service
                                     </p>
                                     <div class="icon">
                                         <div>
@@ -953,16 +949,14 @@
                                         <img src="./images/testiimg.png" alt="tesiimg">
                                         <div class="information">
 
-                                            <p>Joseph</p>
+                                            <p>Lily Brown </p>
                                             <div class="stars">
                                                 <span>CEo of (Flaxstudio)</span>
                                             </div>
                                         </div>
                                     </div>
                                     <p>
-                                        "Roosevelt Writes exceeded my expectations at every turn. They transformed my
-                                        manuscript into a captivating Book that resonated.
-                                        with readers far and wide. It's a highly recommended service!"
+                                        I was so scared of hiring ghostwriters online but it’s safe to say that Roosevelt Writes has eradiacted my fear! My ghostwriter Michael did an awesome job with the project. The customer service agents were also so accommodating. Thank you guys! 
                                     </p>
                                     <div class="icon">
                                         <div>
@@ -985,16 +979,14 @@
                                         <img src="./images/testiimg.png" alt="tesiimg">
                                         <div class="information">
 
-                                            <p>Archer</p>
+                                            <p>John F. </p>
                                             <div class="stars">
                                                 <span>CEo of (Flaxstudio)</span>
                                             </div>
                                         </div>
                                     </div>
                                     <p>
-                                        "Roosevelt Writes exceeded my expectations at every turn. They transformed my
-                                        manuscript into a captivating Book that resonated.
-                                        with readers far and wide. It's a highly recommended service!"
+                                        Reliable service, competent team. I would definitely recommend this service. 
                                     </p>
                                     <div class="icon">
                                         <div>
