--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                             <div class="testi-box">
                                 <div class="item">
                                     <div class="profile">
-                                        <img src="./images/testiimg.png" alt="tesiimg">
+                                        <img src="./images/testi2.jpg" alt="tesiimg">
                                         <div class="information">
 
                                             <p>Amanda L. </p>
@@ -946,7 +946,7 @@
                             <div class="testi-box">
                                 <div class="item">
                                     <div class="profile">
-                                        <img src="./images/testiimg.png" alt="tesiimg">
+                                        <img src="./images/pic12.jpg" alt="tesiimg">
                                         <div class="information">
 
                                             <p>Lily Brown </p>
@@ -976,7 +976,7 @@
                             <div class="testi-box">
                                 <div class="item">
                                     <div class="profile">
-                                        <img src="./images/testiimg.png" alt="tesiimg">
+                                        <img src="./images/testi3.jpg" alt="tesiimg">
                                         <div class="information">
 
                                             <p>John F. </p>
